test/error/PreElseUnmatched.fu
public static class Test
{
	public static bool Run()
	{
#else //ERROR: '#else' with no matching '#if'
		return true;
	}
}
